@@ -34,7 +34,6 @@
 - (BOOL)frameSizeUpdatesDisabled;
 
 - (void)performDictionaryLookupAtCurrentMouseLocation;
-- (void)hideWordDefinitionWindow;
 
 - (NSInteger)spellCheckerDocumentTag;
 - (void)handleCorrectionPanelResult:(NSString*)result;
